# structuring_a_data_project

./: .gitignore  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: index.md
github/workflow/: ci.yml
tests/: __init__.py  test_pipeline.py
