[tool.poetry]
name = "estruturando um projeto de dados"
version = "0.1.0"
description = ""
authors = ["fsgregorio <fsgregorio92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest = "^8.3.4"
isort = "^6.0.0"
blue = "^0.9.1"
pydocstyle = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
