[tool.poetry]
name = "estruturando_um_projeto_de_dados"
version = "0.1.0"
description = ""
authors = ["fsgregorio <fsgregorio92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest = "^8.3.4"
isort = "^6.0.0"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.15.0"
mkdocs-material = "^9.6.4"
pymdown-extensions = "^10.14.3"
mkdocs-bootstrap386 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
